--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.retrofit">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +13,18 @@
         android:theme="@style/Theme.Retrofit">
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WebServicesUsers"
+            android:exported="false" />
+        <activity
+            android:name=".WebServicesComements"
+            android:exported="false" />
+        <activity
+            android:name=".WebServicesAlbums"
+            android:exported="false" />
+        <activity
+            android:name=".Menu_WebServices"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
